--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
+    "98.css": "^0.1.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
